--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "watch-bsnc_vat_0050": "cds watch --open bsnc_vat_0050/webapp/index.html?sap-ui-xx-viewCache=false",
     "watch-bsnc_vat_0060": "cds watch --open bsnc_vat_0060/webapp/index.html?sap-ui-xx-viewCache=false",
     "watch-bsnc_vat_0080": "cds watch --open bsnc_vat_0080/webapp/index.html?sap-ui-xx-viewCache=false",
-    "watch-bsnc_vat_0110": "cds watch --open bsnc_vat_0110/webapp/index.html?sap-ui-xx-viewCache=false"
+    "watch-bsnc_vat_0110": "cds watch --open bsnc_vat_0110/webapp/index.html?sap-ui-xx-viewCache=false",
+    "watch-bsnc_vat_0120": "cds watch --open bsnc_vat_0120/webapp/index.html?sap-ui-xx-viewCache=false"
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
@@ -59,6 +60,7 @@
     "app/bsnc_vat_0050",
     "app/bsnc_vat_0060",
     "app/bsnc_vat_0080",
-    "app/bsnc_vat_0110"
+    "app/bsnc_vat_0110",
+    "app/bsnc_vat_0120"
   ]
 }
